--- a/HelpDesk/public/views/cadastro/cadastro.html
+++ b/HelpDesk/public/views/cadastro/cadastro.html
@@ -8,6 +8,7 @@
     <br>
     <form class="form" name="formCadastro" id="formulario" novalidate ng-submit="vm.submitForm(vm.cadastro,formCadastro)"> <!-- Inicio do Fomulário -->
       <div class="row">
+        <p class="alert-success" ng-hide="alerta">{{vm.mensagem}}</p>
         <div class="form-group col-sm-2">
           <label for="colaborador">Colaborador</label>
           <br>
