--- a/HelpDesk/public/views/consulta/consulta.html
+++ b/HelpDesk/public/views/consulta/consulta.html
@@ -39,15 +39,16 @@
             <tr>
                 <th>#</th>
                 <th>
-                    <div class="dropdown">
-                        <span ng-click="vm.ordenar('colaborador')">Colaborador</span>&nbsp;
-                        <button class="btn btn-info btn-sm dropdown-toggle" type="button" data-toggle="dropdown">
+                    <div class="btn-group" style="width:116px">
+                        <button class="btn btn-info btn-sm" type="button" ng-click="vm.ordenar('colaborador')">Colaborador</button>
+                        <button class="btn btn-info btn-sm dropdown-toggle" ng-class="vm.filtrarColaborador=='' || vm.filtrarColaborador==null ? '' : 'btn-warning'" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             <span class="caret"></span>
                         </button>
                         <ul class="dropdown-menu">
                             <li ng-repeat="cadastro in vm.cadastros | unique:'colaborador'">
                                 <a ng-click="vm.filtrarConsulta(cadastro.colaborador,'colaborador')">{{cadastro.colaborador}}</a>
                             </li>
+                            <li role="separator" class="divider"></li>
                             <li>
                                 <a ng-click="vm.filtrarConsulta(null,'colaborador')">Todos</a>
                             </li>
@@ -55,15 +56,16 @@
                     </div>
                 </th>
                 <th>
-                    <div class="dropdown">
-                        <span ng-click="vm.ordenar('entrada')">Entrada</span>&nbsp;
-                        <button class="btn btn-info btn-sm dropdown-toggle" type="button" data-toggle="dropdown">
+                    <div class="btn-group" style="width:90px">
+                        <button class="btn btn-info btn-sm" type="button" ng-click="vm.ordenar('entrada')">Entrada</button>
+                        <button class="btn btn-info btn-sm dropdown-toggle" ng-class="vm.filtrarEntrada=='' || vm.filtrarEntrada==null ? '' : 'btn-warning'" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             <span class="caret"></span>
                         </button>
                         <ul class="dropdown-menu">
                             <li ng-repeat="cadastro in vm.cadastros | unique:'entrada'">
                                 <a ng-click="vm.filtrarConsulta(cadastro.entrada,'entrada')">{{cadastro.entrada}}</a>
                             </li>
+                            <li role="separator" class="divider"></li>
                             <li>
                                 <a ng-click="vm.filtrarConsulta(null,'entrada')">Todos</a>
                             </li>
@@ -71,15 +73,16 @@
                     </div>
                 </th>
                 <th>
-                    <div class="dropdown">
-                        <span ng-click="vm.ordenar('origem')">Origem</span>&nbsp;
-                        <button class="btn btn-info btn-sm dropdown-toggle" type="button" data-toggle="dropdown">
+                    <div class="btn-group" style="width:88px">
+                        <button class="btn btn-info btn-sm" type="button" ng-click="vm.ordenar('origem')">Origem</button>
+                        <button class="btn btn-info btn-sm dropdown-toggle" ng-class="vm.filtrarOrigem=='' || vm.filtrarOrigem==null ? '' : 'btn-warning'" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             <span class="caret"></span>
                         </button>
                         <ul class="dropdown-menu">
                             <li ng-repeat="cadastro in vm.cadastros | unique:'origem'">
                                 <a ng-click="vm.filtrarConsulta(cadastro.origem,'origem')">{{cadastro.origem}}</a>
                             </li>
+                            <li role="separator" class="divider"></li>
                             <li>
                                 <a ng-click="vm.filtrarConsulta(null,'origem')">Todos</a>
                             </li>
@@ -87,15 +90,16 @@
                     </div>
                 </th>
                 <th>
-                    <div class="dropdown">
-                        <span ng-click="vm.ordenar('aplicacao')">Aplicação</span>&nbsp;
-                        <button class="btn btn-info btn-sm dropdown-toggle" type="button" data-toggle="dropdown">
+                    <div class="btn-group" style="width:100px">
+                        <button class="btn btn-info btn-sm" type="button" ng-click="vm.ordenar('aplicacao')">Aplicação</button>
+                        <button class="btn btn-info btn-sm dropdown-toggle" ng-class="vm.filtrarAplicacao=='' || vm.filtrarAplicacao==null ? '' : 'btn-warning'" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             <span class="caret"></span>
                         </button>
                         <ul class="dropdown-menu">
                             <li ng-repeat="cadastro in vm.cadastros | unique:'aplicacao'">
                                 <a ng-click="vm.filtrarConsulta(cadastro.aplicacao,'aplicacao')">{{cadastro.aplicacao}}</a>
                             </li>
+                            <li role="separator" class="divider"></li>
                             <li>
                                 <a ng-click="vm.filtrarConsulta(null,'aplicacao')">Todos</a>
                             </li>
@@ -103,15 +107,16 @@
                     </div>
                 </th>
                 <th>
-                    <div class="dropdown">
-                        <span ng-click="vm.ordenar('device')">Device</span>&nbsp;
-                        <button class="btn btn-info btn-sm dropdown-toggle" type="button" data-toggle="dropdown">
+                    <div class="btn-group" style="width:84px">
+                        <button class="btn btn-info btn-sm" type="button" ng-click="vm.ordenar('device')">Device</button>
+                        <button class="btn btn-info btn-sm dropdown-toggle" ng-class="vm.filtrarDevice=='' || vm.filtrarDevice==null ? '' : 'btn-warning'" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             <span class="caret"></span>
                         </button>
                         <ul class="dropdown-menu">
                             <li ng-repeat="cadastro in vm.cadastros | unique:'device'">
                                 <a ng-click="vm.filtrarConsulta(cadastro.device.nome,'device')">{{cadastro.device.nome}}</a>
                             </li>
+                            <li role="separator" class="divider"></li>
                             <li>
                                 <a ng-click="vm.filtrarConsulta(null,'device')">Todos</a>
                             </li>
@@ -119,15 +124,16 @@
                     </div>
                 </th>
                 <th>
-                    <div class="dropdown">
-                        <span ng-click="vm.ordenar('status')">Status</span>&nbsp;
-                        <button class="btn btn-info btn-sm dropdown-toggle" type="button" data-toggle="dropdown">
+                    <div class="btn-group" style="width:82px">
+                        <button class="btn btn-info btn-sm" type="button" ng-click="vm.ordenar('status')">Status</button>
+                        <button class="btn btn-info btn-sm dropdown-toggle" ng-class="vm.filtrarStatus=='' || vm.filtrarStatus==null ? '' : 'btn-warning'" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             <span class="caret"></span>
                         </button>
                         <ul class="dropdown-menu">
                             <li ng-repeat="cadastro in vm.cadastros | unique:'status'">
                                 <a ng-click="vm.filtrarConsulta(cadastro.status,'status')">{{cadastro.status}}</a>
                             </li>
+                            <li role="separator" class="divider"></li>
                             <li>
                                 <a ng-click="vm.filtrarConsulta(null,'status')">Todos</a>
                             </li>
@@ -135,15 +141,16 @@
                     </div>
                 </th>
                 <th>
-                    <div class="dropdown">
-                        <span ng-click="vm.ordenar('problema')">Problema</span>&nbsp;
-                        <button class="btn btn-info btn-sm dropdown-toggle" type="button" data-toggle="dropdown">
+                    <div class="btn-group" style="width:101px">
+                        <button class="btn btn-info btn-sm" type="button" ng-click="vm.ordenar('problema')">Problema</button>
+                        <button class="btn btn-info btn-sm dropdown-toggle" ng-class="vm.filtrarProblema=='' || vm.filtrarProblema==null ? '' : 'btn-warning'" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             <span class="caret"></span>
                         </button>
                         <ul class="dropdown-menu">
                             <li ng-repeat="cadastro in vm.cadastros | unique:'problema'">
                                 <a ng-click="vm.filtrarConsulta(cadastro.problema,'problema')">{{cadastro.problema}}</a>
                             </li>
+                            <li role="separator" class="divider"></li>
                             <li>
                                 <a ng-click="vm.filtrarConsulta(null,'problema')">Todos</a>
                             </li>
@@ -151,15 +158,16 @@
                     </div>
                 </th>
                 <th>
-                    <div class="dropdown">
-                        <span ng-click="vm.ordenar('idFreshdesk')">ID FreshDesk</span>&nbsp;
-                        <button class="btn btn-info btn-sm dropdown-toggle" type="button" data-toggle="dropdown">
+                    <div class="btn-group" style="width:123px">
+                        <button class="btn btn-info btn-sm" type="button" ng-click="vm.ordenar('idFreshdesk')">ID FreshDesk</button>
+                        <button class="btn btn-info btn-sm dropdown-toggle" ng-class="vm.filtrarIdFreshdesk=='' || vm.filtrarIdFreshdesk==null ? '' : 'btn-warning'" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             <span class="caret"></span>
                         </button>
                         <ul class="dropdown-menu">
                             <li ng-repeat="cadastro in vm.cadastros | unique:'idFreshdesk'">
                                 <a ng-click="vm.filtrarConsulta(cadastro.idFreshdesk,'idFreshdesk')">{{cadastro.idFreshdesk}}</a>
                             </li>
+                            <li role="separator" class="divider"></li>
                             <li>
                                 <a ng-click="vm.filtrarConsulta(null,'idFreshdesk')">Todos</a>
                             </li>
@@ -167,15 +175,16 @@
                     </div>
                 </th>
                 <th>
-                    <div class="dropdown">
-                        <span ng-click="vm.ordenar('idAluno')">ID Aluno</span>&nbsp;
-                        <button class="btn btn-info btn-sm dropdown-toggle" type="button" data-toggle="dropdown">
+                    <div class="btn-group" style="width:93px">
+                        <button class="btn btn-info btn-sm" type="button" ng-click="vm.ordenar('idAluno')">ID Aluno</button>
+                        <button class="btn btn-info btn-sm dropdown-toggle" ng-class="vm.filtrarIdAluno=='' || vm.filtrarIdAluno==null ? '' : 'btn-warning'" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             <span class="caret"></span>
                         </button>
                         <ul class="dropdown-menu">
                             <li ng-repeat="cadastro in vm.cadastros | unique:'idAluno'">
                                 <a ng-click="vm.filtrarConsulta(cadastro.idAluno,'idAluno')">{{cadastro.idAluno}}</a>
                             </li>
+                            <li role="separator" class="divider"></li>
                             <li>
                                 <a ng-click="vm.filtrarConsulta(null,'idAluno')">Todos</a>
                             </li>
@@ -183,15 +192,16 @@
                     </div>
                 </th>
                 <th>
-                    <div class="dropdown">
-                        <span ng-click="vm.ordenar('data')">Data</span>&nbsp;
-                        <button class="btn btn-info btn-sm dropdown-toggle" type="button" data-toggle="dropdown">
+                    <div class="btn-group" style="width:73px">
+                        <button class="btn btn-info btn-sm" type="button" ng-click="vm.ordenar('data')">Data</button>
+                        <button class="btn btn-info btn-sm dropdown-toggle" ng-class="vm.filtrarData=='' || vm.filtrarData==null ? '' : 'btn-warning'" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             <span class="caret"></span>
                         </button>
                         <ul class="dropdown-menu">
                             <li ng-repeat="cadastro in vm.cadastros | unique:'data'">
                                 <a ng-click="vm.filtrarConsulta(cadastro.data,'data')">{{cadastro.data | date:'dd/MM/yyyy'}}</a>
                             </li>
+                            <li role="separator" class="divider"></li>
                             <li>
                                 <a ng-click="vm.filtrarConsulta(null,'data')">Todos</a>
                             </li>
@@ -199,15 +209,16 @@
                     </div>
                 </th>
                 <th>
-                    <div class="dropdown">
-                        <span ng-click="vm.ordenar('diagnostico')">Diagnóstico</span>&nbsp;
-                        <button class="btn btn-info btn-sm dropdown-toggle" type="button" data-toggle="dropdown">
+                    <div class="btn-group" style="width:113px">
+                        <button class="btn btn-info btn-sm" type="button" ng-click="vm.ordenar('diagnostico')">Diagnóstico</button>
+                        <button class="btn btn-info btn-sm dropdown-toggle" ng-class="vm.filtrarDiagnostico=='' || vm.filtrarDiagnostico==null ? '' : 'btn-warning'" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             <span class="caret"></span>
                         </button>
                         <ul class="dropdown-menu">
                             <li ng-repeat="cadastro in vm.cadastros | unique:'diagnostico'">
                                 <a ng-click="vm.filtrarConsulta(cadastro.diagnostico,'diagnostico')">{{cadastro.diagnostico}}</a>
                             </li>
+                            <li role="separator" class="divider"></li>
                             <li>
                                 <a ng-click="vm.filtrarConsulta(null,'diagnostico')">Todos</a>
                             </li>
@@ -215,15 +226,16 @@
                     </div>
                 </th>
                 <th>
-                    <div class="dropdown">
-                        <span ng-click="vm.ordenar('resposta')">Resposta</span>&nbsp;
-                        <button class="btn btn-info btn-sm dropdown-toggle" type="button" data-toggle="dropdown">
+                    <div class="btn-group">
+                        <button class="btn btn-info btn-sm" type="button" ng-click="vm.ordenar('resposta')">Resposta</button>
+                        <button class="btn btn-info btn-sm dropdown-toggle" ng-class="vm.filtrarResposta=='' || vm.filtrarResposta==null ? '' : 'btn-warning'" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             <span class="caret"></span>
                         </button>
                         <ul class="dropdown-menu">
                             <li ng-repeat="cadastro in vm.cadastros | unique:'resposta'">
                                 <a ng-click="vm.filtrarConsulta(cadastro.resposta,'resposta')">{{cadastro.resposta}}</a>
                             </li>
+                            <li role="separator" class="divider"></li>
                             <li>
                                 <a ng-click="vm.filtrarConsulta(null,'resposta')">Todos</a>
                             </li>
@@ -231,15 +243,16 @@
                     </div>
                 </th>
                 <th>
-                    <div class="dropdown">
-                        <span ng-click="vm.ordenar('observacoes')">Observações</span>&nbsp;
-                        <button class="btn btn-info btn-sm dropdown-toggle" type="button" data-toggle="dropdown">
+                    <div class="btn-group" style="width:120px">
+                        <button class="btn btn-info btn-sm" type="button" ng-click="vm.ordenar('observacoes')">Observações</button>
+                        <button class="btn btn-info btn-sm dropdown-toggle" ng-class="vm.filtrarObservacoes=='' || vm.filtrarObservacoes==null ? '' : 'btn-warning'" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             <span class="caret"></span>
                         </button>
                         <ul class="dropdown-menu">
                             <li ng-repeat="cadastro in vm.cadastros | unique:'observacoes'">
                                 <a ng-click="vm.filtrarConsulta(cadastro.observacoes,'observacoes')">{{cadastro.observacoes}}</a>
                             </li>
+                            <li role="separator" class="divider"></li>
                             <li>
                                 <a ng-click="vm.filtrarConsulta(null,'observacoes')">Todos</a>
                             </li>
