--- a/HelpDesk/public/views/consulta/consulta.html
+++ b/HelpDesk/public/views/consulta/consulta.html
@@ -2,7 +2,7 @@
 <div class="container">
   <div class="jumbotron">
     <h2>
-      <span class="glyphicon glyphicons-search"></span>
+      <span class="glyphicon glyphicon-search"></span>
       Relatórios
       <small class="text-muted">HelpDesk</small>
     </h2>
