Renomeando função de cadastro para melhorar legibilidade do código

--- a/HelpDesk/public/views/cadastro/cadastro.html
+++ b/HelpDesk/public/views/cadastro/cadastro.html
@@ -6,7 +6,7 @@
       <small class="text-muted">HelpDesk</small>
     </h2>
     <br>
-    <form class="form" name="formCadastro" id="formulario" novalidate ng-submit="vm.submitForm(vm.cadastro,formCadastro)"> <!-- Inicio do Fomulário -->
+    <form class="form" name="formCadastro" id="formulario" novalidate ng-submit="vm.cadastrar(vm.cadastro,formCadastro)"> <!-- Inicio do Fomulário -->
       <div class="row">
         <p class="alert-success" ng-hide="alerta">{{vm.mensagem}}</p>
         <div class="form-group col-sm-2">
