--- a/HelpDesk/public/views/consulta/consulta.html
+++ b/HelpDesk/public/views/consulta/consulta.html
@@ -32,7 +32,7 @@
         <th>#</th>
         <th>
           <div class="btn-group" style="width:117px">
-            <button class="btn btn-info btn-sm" type="button" ng-click="vm.ordenar('colaborador')">Colaborador</button>
+            <button class="btn btn-info btn-sm" type="button" ng-click="vm.ordenar('colaborador')" ng-class="vm.sortKey=='colaborador' ? 'active' : ''">Colaborador</button>
             <button class="btn btn-info btn-sm dropdown-toggle" ng-class="vm.filtrarColaborador=='' || vm.filtrarColaborador==null ? '' : 'btn-warning'" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               <span class="caret"></span>
             </button>
@@ -49,7 +49,7 @@
         </th>
         <th>
           <div class="btn-group" style="width:91px">
-            <button class="btn btn-info btn-sm" type="button" ng-click="vm.ordenar('entrada')">Entrada</button>
+            <button class="btn btn-info btn-sm" type="button" ng-click="vm.ordenar('entrada')" ng-class="vm.sortKey=='entrada' ? 'active' : ''">Entrada</button>
             <button class="btn btn-info btn-sm dropdown-toggle" ng-class="vm.filtrarEntrada=='' || vm.filtrarEntrada==null ? '' : 'btn-warning'" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               <span class="caret"></span>
             </button>
@@ -66,7 +66,7 @@
         </th>
         <th>
           <div class="btn-group" style="width:89px">
-            <button class="btn btn-info btn-sm" type="button" ng-click="vm.ordenar('origem')">Origem</button>
+            <button class="btn btn-info btn-sm" type="button" ng-click="vm.ordenar('origem')" ng-class="vm.sortKey=='origem' ? 'active' : ''">Origem</button>
             <button class="btn btn-info btn-sm dropdown-toggle" ng-class="vm.filtrarOrigem=='' || vm.filtrarOrigem==null ? '' : 'btn-warning'" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               <span class="caret"></span>
             </button>
@@ -83,7 +83,7 @@
         </th>
         <th>
           <div class="btn-group" style="width:101px">
-            <button class="btn btn-info btn-sm" type="button" ng-click="vm.ordenar('aplicacao')">Aplicação</button>
+            <button class="btn btn-info btn-sm" type="button" ng-click="vm.ordenar('aplicacao')" ng-class="vm.sortKey=='aplicacao' ? 'active' : ''">Aplicação</button>
             <button class="btn btn-info btn-sm dropdown-toggle" ng-class="vm.filtrarAplicacao=='' || vm.filtrarAplicacao==null ? '' : 'btn-warning'" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               <span class="caret"></span>
             </button>
@@ -100,7 +100,7 @@
         </th>
         <th>
           <div class="btn-group" style="width:85px">
-            <button class="btn btn-info btn-sm" type="button" ng-click="vm.ordenar('device')">Device</button>
+            <button class="btn btn-info btn-sm" type="button" ng-click="vm.ordenar('device')" ng-class="vm.sortKey=='device' ? 'active' : ''">Device</button>
             <button class="btn btn-info btn-sm dropdown-toggle" ng-class="vm.filtrarDevice=='' || vm.filtrarDevice==null ? '' : 'btn-warning'" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               <span class="caret"></span>
             </button>
@@ -117,7 +117,7 @@
         </th>
         <th>
           <div class="btn-group" style="width:83px">
-            <button class="btn btn-info btn-sm" type="button" ng-click="vm.ordenar('status')">Status</button>
+            <button class="btn btn-info btn-sm" type="button" ng-click="vm.ordenar('status')" ng-class="vm.sortKey=='status' ? 'active' : ''">Status</button>
             <button class="btn btn-info btn-sm dropdown-toggle" ng-class="vm.filtrarStatus=='' || vm.filtrarStatus==null ? '' : 'btn-warning'" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               <span class="caret"></span>
             </button>
@@ -134,7 +134,7 @@
         </th>
         <th>
           <div class="btn-group" style="width:102px">
-            <button class="btn btn-info btn-sm" type="button" ng-click="vm.ordenar('problema')">Problema</button>
+            <button class="btn btn-info btn-sm" type="button" ng-click="vm.ordenar('problema')" ng-class="vm.sortKey=='problema' ? 'active' : ''">Problema</button>
             <button class="btn btn-info btn-sm dropdown-toggle" ng-class="vm.filtrarProblema=='' || vm.filtrarProblema==null ? '' : 'btn-warning'" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               <span class="caret"></span>
             </button>
@@ -151,7 +151,7 @@
         </th>
         <th>
           <div class="btn-group" style="width:124px">
-            <button class="btn btn-info btn-sm" type="button" ng-click="vm.ordenar('idFreshdesk')">ID FreshDesk</button>
+            <button class="btn btn-info btn-sm" type="button" ng-click="vm.ordenar('idFreshdesk')" ng-class="vm.sortKey=='idFreshdesk' ? 'active' : ''">ID FreshDesk</button>
             <button class="btn btn-info btn-sm dropdown-toggle" ng-class="vm.filtrarIdFreshdesk=='' || vm.filtrarIdFreshdesk==null ? '' : 'btn-warning'" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               <span class="caret"></span>
             </button>
@@ -168,7 +168,7 @@
         </th>
         <th>
             <div class="btn-group" style="width:94px">
-                <button class="btn btn-info btn-sm" type="button" ng-click="vm.ordenar('idAluno')">ID Aluno</button>
+                <button class="btn btn-info btn-sm" type="button" ng-click="vm.ordenar('idAluno')" ng-class="vm.sortKey=='idAluno' ? 'active' : ''">ID Aluno</button>
                 <button class="btn btn-info btn-sm dropdown-toggle" ng-class="vm.filtrarIdAluno=='' || vm.filtrarIdAluno==null ? '' : 'btn-warning'" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     <span class="caret"></span>
                 </button>
@@ -185,7 +185,7 @@
         </th>
         <th>
             <div class="btn-group" style="width:74px">
-                <button class="btn btn-info btn-sm" type="button" ng-click="vm.ordenar('data')">Data</button>
+                <button class="btn btn-info btn-sm" type="button" ng-click="vm.ordenar('data')" ng-class="vm.sortKey=='data' ? 'active' : ''">Data</button>
                 <button class="btn btn-info btn-sm dropdown-toggle" ng-class="vm.filtrarData=='' || vm.filtrarData==null ? '' : 'btn-warning'" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     <span class="caret"></span>
                 </button>
@@ -202,7 +202,7 @@
         </th>
         <th>
             <div class="btn-group" style="width:114px">
-                <button class="btn btn-info btn-sm" type="button" ng-click="vm.ordenar('diagnostico')">Diagnóstico</button>
+                <button class="btn btn-info btn-sm" type="button" ng-click="vm.ordenar('diagnostico')" ng-class="vm.sortKey=='diagnostico' ? 'active' : ''">Diagnóstico</button>
                 <button class="btn btn-info btn-sm dropdown-toggle" ng-class="vm.filtrarDiagnostico=='' || vm.filtrarDiagnostico==null ? '' : 'btn-warning'" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     <span class="caret"></span>
                 </button>
@@ -219,7 +219,7 @@
         </th>
         <th>
             <div class="btn-group" style="width:102px">
-                <button class="btn btn-info btn-sm" type="button" ng-click="vm.ordenar('resposta')">Resposta</button>
+                <button class="btn btn-info btn-sm" type="button" ng-click="vm.ordenar('resposta')" ng-class="vm.sortKey=='resposta' ? 'active' : ''">Resposta</button>
                 <button class="btn btn-info btn-sm dropdown-toggle" ng-class="vm.filtrarResposta=='' || vm.filtrarResposta==null ? '' : 'btn-warning'" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     <span class="caret"></span>
                 </button>
@@ -236,7 +236,7 @@
         </th>
         <th>
             <div class="btn-group" style="width:121px">
-                <button class="btn btn-info btn-sm" type="button" ng-click="vm.ordenar('observacoes')">Observações</button>
+                <button class="btn btn-info btn-sm" type="button" ng-click="vm.ordenar('observacoes')" ng-class="vm.sortKey=='observacoes' ? 'active' : ''">Observações</button>
                 <button class="btn btn-info btn-sm dropdown-toggle" ng-class="vm.filtrarObservacoes=='' || vm.filtrarObservacoes==null ? '' : 'btn-warning'" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     <span class="caret"></span>
                 </button>
