Correção na quantidade de caracteres por busca campo PROCURAR de CONSULTA.HTML

--- a/HelpDesk/public/views/consulta/consulta.html
+++ b/HelpDesk/public/views/consulta/consulta.html
@@ -11,7 +11,7 @@
       <div class="form-group">
         <label class="col-sm-1 control-label" for="procurar">Procurar:</label>
         <div class="col-sm-3">
-          <input type="text" id="procurar" name="procurar" ng-model="procurar" class="form-control" ng-minlength="4" ng-maxlength="7" placeholder="Procurar...">
+          <input type="text" id="procurar" name="procurar" ng-model="procurar" class="form-control" placeholder="Procurar...">
         </div>
         <label class="col-sm-1 control-label" for="dataDe">De:</label>
         <div class="col-sm-3">
