Registrando data automaticamente no CADASTRO.HTML

--- a/HelpDesk/public/views/consulta/consulta.html
+++ b/HelpDesk/public/views/consulta/consulta.html
@@ -3,7 +3,7 @@
   <div class="jumbotron">
     <h2>
       <span class="glyphicon glyphicon-search"></span>
-      Relatórios
+      Consultas
       <small class="text-muted">HelpDesk</small>
     </h2>
     <br>
